--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -37,44 +37,6 @@
     </div>
 </div>
 
-<!--Modal LogIn-->
-<div class="modal fade" id="modalLogIn" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Log In</h4>
-            </div>
-            <div class="modal-body">
-                <form method="post"
-                      action="<?php echo $this->url(array('module' => 'default', 'controller' => 'user', 'action' => 'login')); ?>">
-                    <div class="form-group">
-                        <label for="inputEmail">Correo</label>
-                        <input type="email" class="form-control" id="inputEmail" placeholder="Correo" name="inputEmail">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="inputPassword">Contraseña</label>
-                        <input type="password" class="form-control" id="inputPassword" placeholder="Contraseña"
-                               name="inputPassword">
-                    </div>
-
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-info">Entrar</button>
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <form
-                    action="<?php echo $this->url(array('module' => 'default', 'controller' => 'user', 'action' => 'register')); ?>">
-                    <input type="submit" class="btn btn-info" value="Registrate">
-                </form>
-            </div>
-        </div>
-    </div>
-</div>
-
 <header>
     <div class="container">
         <div class="row">
@@ -143,7 +105,7 @@
                         <li>
                             <a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'index', 'action' => 'events')); ?>">Eventos</a>
                         </li>
-                        <li class="logIn"><a href="#modalLogIn">Log In</a></li>
+                        <li class="logIn"><a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'index', 'action' => 'login')); ?>">Log In</a></li>
                         <li>
                             <a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'index', 'action' => 'contact')); ?>">Contacto</a>
                         </li>
