change the clients page

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -94,7 +94,7 @@
                             <a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'index', 'action' => 'services')); ?>">Servicios</a>
                         </li>
                         <li>
-                            <a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'user', 'action' => 'index')); ?>">Clientes</a>
+                            <a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'index', 'action' => 'clients')); ?>">Clientes</a>
                         </li>
                         <li>
                             <a href="<?php echo $this->url(array('module' => 'default', 'controller' => 'index', 'action' => 'videos')); ?>">Videos</a>
