--- a/public/styles/campion de mexico2.css
+++ b/public/styles/campion de mexico2.css
@@ -119,7 +119,7 @@ form .form-group {
     margin-left: 40px;
 }
 
-.contact, .register, .clientes, .products, .enterprise, .events, .seminew, .services, .videos, .login {
+.contact, .register, .clientes, .products, .enterprise, .events, .seminew, .services, .videos, .login, .clients{
     border-top: 2px solid #00FFD1;
     width: 90%;
     margin: auto;
