admin module added, but dont show his layout

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Encabezado</title>
+    <title>Campion de México</title>
 
     <?php
     $this->headLink()->appendStylesheet($this->baseUrl() . '/bootstrap-3.3.2-dist/bootstrap-3.3.2-dist/css/bootstrap.min.css');
