--- a/application/modules/admin/layouts/scripts/layout.phtml
+++ b/application/modules/admin/layouts/scripts/layout.phtml
@@ -6,7 +6,7 @@
 
     <?php
     $this->headLink()->appendStylesheet($this->baseUrl() . '/bootstrap-3.3.2-dist/bootstrap-3.3.2-dist/css/bootstrap.min.css');
-    $this->headLink()->appendStylesheet($this->baseUrl() . '/styles/campion de mexico2.css');
+    $this->headLink()->appendStylesheet($this->baseUrl() . '/styles/adminModule.css');
 
     $this->headScript()->appendFile($this->baseUrl() . '/js/jquery-2.1.3.min.js');
     $this->headScript()->appendFile($this->baseUrl() . '/bootstrap-3.3.2-dist/bootstrap-3.3.2-dist/js/bootstrap.min.js');
@@ -27,20 +27,24 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li>Usuarios</li>
-                    <li>Productos</li>
-                    <li>Informacion</li>
+                    <li><a href="#">Usuarios</a></li>
+                    <li><a href="#">Productos</a></li>
+                    <li><a href="#">Informacion</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li>Bienvenido</li>
+                    <li><a href="#">Bienvenido</a></li>
                     <li><a href="#"><i class="glyphicon glyphicon-lock"></i> Salir</a></li>
                 </ul>
             </div>
         </div>
     </div>
 
-    <?php echo $this->layout()->content ?>
+    <div class="container">
+        <div class="starter-template">
+            <?php echo $this->layout()->content?>
+        </div>
+    </div>
 
     <footer>
         <div class="row">
