--- a/application/modules/admin/layouts/scripts/layout.phtml
+++ b/application/modules/admin/layouts/scripts/layout.phtml
@@ -22,12 +22,12 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">Campion de México</a>
+                <a class="navbar-brand" href="<?php echo $this->url(array('module' => 'admin', 'controller' => 'index', 'action' => 'index')); ?>">Campion de México</a>
             </div>
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="#">Usuarios</a></li>
+                    <li><a href="<?php echo $this->url(array('module' => 'admin', 'controller' => 'index', 'action' => 'users')); ?>">Usuarios</a></li>
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Informacion</a></li>
                 </ul>
