--- a/application/modules/admin/views/scripts/index/users.phtml
+++ b/application/modules/admin/views/scripts/index/users.phtml
@@ -11,6 +11,7 @@
                     <th>Apellido</th>
                     <th>Email</th>
                     <th>Password</th>
+                    <th>Tipo de Usuario</th>
                     <th>Fecha de Nacimiento</th>
                     <th>Sexo</th>
                 </tr>
@@ -39,6 +40,10 @@
                             <td class="passwordClient">
                                 <input type="text" class="form-control" name="password"
                                        value="<?php echo $this->escape($entry->getPassword()); ?>"/>
+                            </td>
+                            <td class="typeUserClient">
+                                <input type="text" class="form-control" name="typeUserId"
+                                        value="<?php echo $this->escape($entry->getTypeUserId()); ?>"/>
                             </td>
                             <td class="dateBirthClient">
                                 <input type="date" class="form-control" name="dateBirth"
