--- a/application/views/scripts/user/register.phtml
+++ b/application/views/scripts/user/register.phtml
@@ -34,44 +34,55 @@
             </div>
 
             <div class="form-group">
-                <label for="password">Fecha de Nacimiento</label>
+                <div class="row">
+                    <div class="col-md-6">
 
-                <div class="btn-group" role="group" aria-label="...">
+                        <label for="password">Fecha de Nacimiento</label>
+                        <div class="btn-group" role="group" aria-label="...">
 
-                    <select type="text" class="btn btn-default" name="inputDay">
-                        <option>Día</option>
-                        <?php
-                        for ($i = 1; $i <= 31; $i++) {
-                            echo "<option>$i</option>";
-                        }
-                        ?>
-                    </select>
+                            <select type="text" class="btn btn-default" name="inputDay">
+                                <option>Día</option>
+                                <?php
+                                for ($i = 1; $i <= 31; $i++) {
+                                    echo "<option>$i</option>";
+                                }
+                                ?>
+                            </select>
 
-                    <select type="text" class="btn btn-default" name="inputMonth">
-                        <option>Mes</option>
-                        <option>Enero</option>
-                        <option>Febrero</option>
-                        <option>Marzo</option>
-                        <option>Abril</option>
-                        <option>Mayo</option>
-                        <option>Junio</option>
-                        <option>Julio</option>
-                        <option>Agosto</option>
-                        <option>Septiembre</option>
-                        <option>Octubre</option>
-                        <option>Noviembre</option>
-                        <option>Diciembre</option>
-                    </select>
+                            <select type="text" class="btn btn-default" name="inputMonth">
+                                <option>Mes</option>
+                                <option>Enero</option>
+                                <option>Febrero</option>
+                                <option>Marzo</option>
+                                <option>Abril</option>
+                                <option>Mayo</option>
+                                <option>Junio</option>
+                                <option>Julio</option>
+                                <option>Agosto</option>
+                                <option>Septiembre</option>
+                                <option>Octubre</option>
+                                <option>Noviembre</option>
+                                <option>Diciembre</option>
+                            </select>
 
-                    <select type="text" class="btn btn-default" name="inputYear">
-                        <option>Año</option>
-                        <?php
-                        for ($i = 1980; $i <= 2010; $i++) {
-                            echo "<option>$i</option>";
-                        }
-                        ?>
-                    </select>
+                            <select type="text" class="btn btn-default" name="inputYear">
+                                <option>Año</option>
+                                <?php
+                                for ($i = 1980; $i <= 2010; $i++) {
+                                    echo "<option>$i</option>";
+                                }
+                                ?>
+                            </select>
+                        </div>
+                    </div>
 
+                    <div class="col-md-6">
+                        <label for="inputType">Tipo de Usuario</label>
+                        <select type="text" class="btn btn-default" name="inputType">
+                            <option value="1">Administrador</option>
+                            <option value="2">Cliente</option>
+                        </select>
+                    </div>
                 </div>
             </div>
 
@@ -79,6 +90,8 @@
                 <label><input type="radio" name="sex" value="Hombre">Hombre</label>
                 <label><input type="radio" name="sex" value="Mujer">Mujer</label>
             </div>
+
+
 
             <div class="form-group">
                 <button type="submit" class="btn btn-info addUser">Enviar</button>
