--- a/application/views/scripts/user/register.phtml
+++ b/application/views/scripts/user/register.phtml
@@ -78,7 +78,7 @@
 
                     <div class="col-md-6">
                         <label for="inputType">Tipo de Usuario</label>
-                        <select type="text" class="btn btn-default" name="inputType">
+                        <select type="text" class="btn btn-default" name="typeUserId">
                             <option value="1">Administrador</option>
                             <option value="2">Cliente</option>
                         </select>
