--- a/application/modules/admin/layouts/scripts/layout.phtml
+++ b/application/modules/admin/layouts/scripts/layout.phtml
@@ -27,7 +27,7 @@
 
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="<?php echo $this->url(array('module' => 'admin', 'controller' => 'index', 'action' => 'users')); ?>">Usuarios</a></li>
+                    <li><a href="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'index')); ?>">Usuarios</a></li>
                     <li><a href="#">Productos</a></li>
                     <li><a href="#">Informacion</a></li>
                 </ul>
