--- a/application/modules/admin/views/scripts/user/index.phtml
+++ b/application/modules/admin/views/scripts/user/index.phtml
@@ -43,6 +43,7 @@
                             </td>
                             <td class="typeUserClient">
                                 <input type="text" class="form-control" name="typeUserId"
+                                       value="<?php echo $this->escape($entry->getTypeUserId()); ?>"/>
                             </td>
                             <td class="dateBirthClient">
                                 <input type="date" class="form-control" name="dateBirth"
