--- a/application/modules/admin/views/scripts/user/modify.phtml
+++ b/application/modules/admin/views/scripts/user/modify.phtml
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <label for="name">Nombre</label>
-                        <input type="text" class="form-control" id="name" placeholder="Nombre" name="name">
+                        <input type="text" class="form-control" id="name" placeholder="Nombre" name="name" value="<?php echo $this->escape($this->id); ?>">
                     </div>
                     <div class="col-md-6">
                         <label for="lastName">Apellido</label>
