--- a/application/modules/admin/views/scripts/user/modify.phtml
+++ b/application/modules/admin/views/scripts/user/modify.phtml
@@ -2,29 +2,34 @@
     <div class="container">
         <center><h1>Modificar</h1></center>
 
+        <?php $currentUser = $this->user ?>
         <form method="post"
               action="<?php echo $this->url(array('module' => 'default', 'controller' => 'user', 'action' => 'sign')); ?>">
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-6">
                         <label for="name">Nombre</label>
-                        <input type="text" class="form-control" id="name" placeholder="Nombre" name="name" value="<?php echo $this->escape($this->id); ?>">
+                        <input type="text" class="form-control" id="name" placeholder="Nombre" name="name"
+                               value="<?php echo $this->escape($currentUser->getName()); ?>">
                     </div>
                     <div class="col-md-6">
                         <label for="lastName">Apellido</label>
-                        <input type="text" class="form-control" id="lastName" placeholder="Apellido" name="lastName">
+                        <input type="text" class="form-control" id="lastName" placeholder="Apellido" name="lastName"
+                               value="<?php echo $this->escape($currentUser->getLastName()); ?>">
                     </div>
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="email">Correo</label>
-                <input type="email" class="form-control" id="email" placeholder="Correo" name="email">
+                <input type="email" class="form-control" id="email" placeholder="Correo" name="email"
+                       value="<?php echo $this->escape($currentUser->getEmail()); ?>">
             </div>
 
             <div class="form-group">
                 <label for="password">Contraseña</label>
-                <input type="text" class="form-control" id="password" placeholder="Password" name="password">
+                <input type="text" class="form-control" id="password" placeholder="Password" name="password"
+                       value="<?php echo $this->escape($currentUser->getPassword()); ?>">
             </div>
 
             <div class="form-group">
@@ -73,6 +78,13 @@
                     <div class="col-md-6">
                         <label for="inputType">Tipo de Usuario</label>
                         <select type="text" class="btn btn-default" name="typeUserId">
+                            <?php if($currentUser->getTypeUserId()===1){ ?>
+                                <option value="1" selected>Administrador</option>
+                                <option value="2">Cliente</option>
+                            <?php } else { ?>
+                                <option value="1">Administrador</option>
+                                <option value="2" selected>Cliente</option>
+                            <?php } ?>
                             <option value="1">Administrador</option>
                             <option value="2">Cliente</option>
                         </select>
