--- a/application/modules/admin/views/scripts/user/index.phtml
+++ b/application/modules/admin/views/scripts/user/index.phtml
@@ -14,7 +14,7 @@
 
         <div class="container">
 
-            <table id='tableClientes'>
+            <table id='tableClientes' class="table table-striped">
 
                 <tr>
                     <th>Id</th>
@@ -25,64 +25,46 @@
                     <th>Tipo de Usuario</th>
                     <th>Fecha de Nacimiento</th>
                     <th>Sexo</th>
+                    <th>Opciones</th>
                 </tr>
 
                 <?php foreach ($this->entries as $entry): ?>
                     <tr>
-                        <form
-                            action="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'edit')); ?>"
-                            method="post">
-                            <td class="idClient">
-                                <input type="number" class="form-control" name="id"
-                                       value="<?php echo $this->escape($entry->getId()); ?>" readonly/>
-                            </td>
-                            <td class="nameClient">
-                                <input type="text" class="form-control" name="name"
-                                       value="<?php echo $this->escape($entry->getName()); ?>"/>
-                            </td>
-                            <td class="lastNameClient">
-                                <input type="text" class="form-control" name="lastName"
-                                       value="<?php echo $this->escape($entry->getLastName()); ?>"/>
-                            </td>
-                            <td class="emailClient">
-                                <input type="email" class="form-control" name="email"
-                                       value="<?php echo $this->escape($entry->getEmail()); ?>"/>
-                            </td>
-                            <td class="passwordClient">
-                                <input type="text" class="form-control" name="password"
-                                       value="<?php echo $this->escape($entry->getPassword()); ?>"/>
-                            </td>
-                            <td class="typeUserClient">
-                                <input type="text" class="form-control" name="typeUser"
-                                       value="<?php echo $this->escape($entry->getTypeUser()->getName()); ?>"/>
-                            </td>
-                            <td class="dateBirthClient">
-                                <input type="date" class="form-control" name="dateBirth"
-                                       value="<?php echo $this->escape($entry->getDateBirth()); ?>"/>
-                            </td>
-                            <td class="sexClient">
-                                <select name="sex">
-                                    <?php if (($entry->getSex()) === "Hombre") { ?>
-                                        <option value="Hombre" selected>Hombre</option>
-                                        <option value="Mujer">Mujer</option>
-                                    <?php } else { ?>
-                                        <option value="Hombre">Hombre</option>
-                                        <option value="Mujer" selected>Mujer</option>
-                                    <?php } ?>
-                                </select>
-                            </td>
-                            <td>
-                                <button type="submit" name="btnModify">
-                                    <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
-                                </button>
-                            </td>
-                            <td>
-                                <button type="submit" name="btnDelete">
-                                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                                </button>
-                            </td>
-                        </form>
+                        <td class="idClient">
+                            <?php echo $this->escape($entry->getId()); ?>
+                        </td>
+                        <td class="nameClient">
+                            <?php echo $this->escape($entry->getName()); ?>
+                        </td>
+                        <td class="lastNameClient">
+                            <?php echo $this->escape($entry->getLastName()); ?>
+                        </td>
+                        <td class="emailClient">
+                            <?php echo $this->escape($entry->getEmail()); ?>
+                        </td>
+                        <td class="passwordClient">
+                            <?php echo $this->escape($entry->getPassword()); ?>
+                        </td>
+                        <td class="typeUserClient">
+                            <?php echo $this->escape($entry->getTypeUser()->getName()); ?>
+                        </td>
+                        <td class="dateBirthClient">
+                            <?php echo $this->escape($entry->getDateBirth()); ?>
+                        </td>
+                        <td class="sexClient">
+                            <?php echo $this->escape($entry->getSex()); ?>
+                        </td>
+                        <td>
+                            <a href="<?php echo $this->url(array('module' => 'admin', 'controller' => 'user', 'action' => 'edit', 'id' => $entry->getId())); ?>">
+                                <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span>
+                            </a>&nbsp;
+                            <a href="#"
+                               onclick="confirmDeleteUser(<?php echo $entry->getId(); ?>,'<?php echo $entry->getName(); ?>');">
+                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                            </a>
+                        </td>
                     </tr>
+
                 <?php endforeach ?>
 
             </table>
@@ -92,3 +74,23 @@
 </div>
 
 <br/>
+
+<div id="dialog-delete" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Eliminar Usuario</h4>
+            </div>
+            <div class="modal-body">
+                <p>¿Esta seguro que desea eliminar el usuario <b id="nameUser"></b>?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                <button type="button" onclick="deleteUser()" class="btn btn-primary">Aceptar</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div><!-- /.modal -->
